--- a/app/views/partials/_header.html.erb
+++ b/app/views/partials/_header.html.erb
@@ -1,4 +1,5 @@
-<div class="main_header_area animated">
+<header class="header_area">
+  <div class="main_header_area animated">
     <div class="container">
       <nav id="navigation1" class="navigation">
         <!-- Logo Area Start -->
@@ -157,3 +158,4 @@
       </nav>
     </div>
   </div>
+</header>
